--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h2>一年內生命見證</h2>
+  <h2>一年內生命見證1</h2>
   <textarea id="testimony" placeholder="請輸入你的見證..." rows="5"></textarea><br>
   <button onclick="submitAndGenerate()">提交並生成圖片</button>
   <p id="status"></p>
