--- a/index2.html
+++ b/index2.html
@@ -4,32 +4,34 @@
   <meta charset="UTF-8">
   <title>一年內生命見證上傳</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <style>
     #preview { width: 90vw; max-width: 300px; aspect-ratio: 3/4; position: relative; border-radius: 16px; overflow: hidden; margin-top: 24px; background: #fff; }
     #bgimg { width: 100%; height: 100%; object-fit: contain; position: absolute; left: 0; top: 0; z-index: 1; pointer-events: none; }
-    #content { position: absolute; left: 0; right: 0; bottom: 0; margin: 20px; padding: 10px; background: rgba(0,0,0,0.20); border-radius: 8px; color: #222; font-size: 20px; z-index: 2; word-break: break-all; font-family: 'Microsoft JhengHei', sans-serif; text-align: left; min-height: 80px; }
-    #downloadLink { display: none; margin-top: 16px; font-size: 16px; color: #2067b2; text-decoration: underline; }
+    #content { 
+      position: absolute;
+      left: 4px;   /* 右移4px */
+      bottom: 0;
+      margin: 20px;
+      padding: 10px;
+      border-radius: 8px;
+      color: #222;
+      font-size: 20px;
+      z-index: 2;
+      word-break: break-all;
+      font-family: 'Microsoft JhengHei', sans-serif;
+      text-align: left;
+      min-height: 319px;
+    }
     textarea {width: 90vw; max-width: 300px;}
-    #imgResultArea img { width: 100%; max-width: 300px; border-radius: 16px; margin-top: 16px; display: block; }
   </style>
 </head>
 <body>
   <h2>一年內生命見證</h2>
   <textarea id="testimony" placeholder="請輸入你的見證..." rows="5"></textarea><br>
-  <button onclick="submitAndGenerate()">提交並生成圖片</button>
+  <button onclick="submitTestimony()">提交</button>
   <p id="status"></p>
-  <div id="preview">
-    <img id="bgimg" crossOrigin="anonymous" src="https://foxzicool.github.io/pic.svg" alt="背景圖">
-    <div id="content">你的見證會顯示在這裡</div>
-  </div>
-  <div id="imgResultArea"></div>
-  <a id="downloadLink" download="testimony.png">下載圖片</a>
   <script>
-    document.getElementById("testimony").addEventListener("input", function() {
-      document.getElementById("content").innerText = this.value || "你的見證會顯示在這裡";
-    });
-    function submitAndGenerate() {
+    function submitTestimony() {
       let content = document.getElementById("testimony").value.trim();
       if (!content) {
         document.getElementById("status").innerText = "請輸入見證內容！";
@@ -43,32 +45,10 @@
       .then(response => response.json())
       .then(data => {
         document.getElementById("status").innerText = data.message;
-        let bgimg = document.getElementById("bgimg");
-        if (!bgimg.complete) {
-          bgimg.onload = generateImage;
-        } else {
-          generateImage();
-        }
+        setTimeout(() => location.href = "index2.html", 1000);
       })
       .catch(error => {
         document.getElementById("status").innerText = "後端連不到";
-      });
-    }
-    function generateImage() {
-      const preview = document.getElementById("preview");
-      html2canvas(preview, { scale: 2 }).then(canvas => {
-        let imgArea = document.getElementById("imgResultArea");
-        imgArea.innerHTML = '';
-        let img = document.createElement("img");
-        img.src = canvas.toDataURL();
-        img.style.width = "100%";
-        img.style.maxWidth = preview.offsetWidth + "px";
-        img.style.borderRadius = '16px';
-        img.style.marginTop = '16px';
-        img.style.display = 'block';
-        imgArea.appendChild(img);
-        document.getElementById("downloadLink").href = img.src;
-        document.getElementById("downloadLink").style.display = "inline-block";
       });
     }
   </script>
