--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     #bgimg { width: 100%; height: 100%; object-fit: contain; position: absolute; left: 0; top: 0; z-index: 1; pointer-events: none; }
     #content { 
       position: absolute;
-      left: 4px;   /* 右移4px */
+      left: 4px;
       bottom: 0;
       margin: 20px;
       padding: 10px;
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <h2>一年內生命見證3</h2>
+  <h2>一年內生命見證</h2>
   <textarea id="testimony" placeholder="請輸入你的見證..." rows="5"></textarea><br>
   <button onclick="submitTestimony()">提交</button>
   <p id="status"></p>
@@ -37,12 +37,16 @@
         document.getElementById("status").innerText = "請輸入見證內容！";
         return;
       }
+      // 這裡換成 cloudflared 給你的網址
       fetch("https://rfc-caroline-pad-count.trycloudflare.com/submit_testimony1", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ content: content })
       })
-      .then(response => response.json())
+      .then(response => {
+        if(!response.ok) throw new Error("後端未回應");
+        return response.json();
+      })
       .then(data => {
         document.getElementById("status").innerText = data.message;
         setTimeout(() => location.href = "index2.html", 1000);
