--- a/index3.html
+++ b/index3.html
@@ -9,11 +9,52 @@
     body{font-family:'Microsoft JhengHei',sans-serif;}
     .main{max-width:1200px;margin:30px auto;}
     .grid{display:grid;grid-template-columns:repeat(4,1fr);gap:20px;}
-    .card{background:#fff;border-radius:16px;box-shadow:0 2px 8px #eee;padding:18px;position:relative;min-height:160px;}
-    .type{color:#fff;background:#2175b8;padding:2px 8px;border-radius:7px;font-size:13px;position:absolute;left:12px;top:12px;}
-    .date{font-size:12px;color:#888;position:absolute;right:12px;top:12px;}
-    .content{margin:38px 0 0 0;word-break:break-all;}
-    .check{position:absolute;left:12px;bottom:10px;transform:scale(1.4);}
+    .card-wrap{position:relative;}
+    .card-preview {
+      width: 100%;
+      max-width: 300px;
+      aspect-ratio: 3/4;
+      position: relative;
+      border-radius: 16px;
+      overflow: hidden;
+      background: #fff;
+      margin: auto;
+      box-shadow: 0 2px 8px #eee;
+    }
+    .bgimg {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      position: absolute;
+      left: 0; top: 0;
+      z-index: 1;
+      pointer-events: none;
+      background: #fff;
+    }
+    .card-content {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      margin: 20px;
+      padding: 10px;
+      background: rgba(0,0,0,0.18);
+      border-radius: 8px;
+      color: #222;
+      font-size: 20px;
+      z-index: 2;
+      word-break: break-all;
+      font-family: 'Microsoft JhengHei', sans-serif;
+      text-align: left;
+      min-height: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .date{font-size:12px;color:#888;position:absolute;right:12px;top:10px;z-index:3;}
+    .type{color:#fff;background:#2175b8;padding:2px 8px;border-radius:7px;font-size:13px;position:absolute;left:12px;top:10px;z-index:3;}
+    .check{position:absolute;left:12px;bottom:10px;transform:scale(1.4);z-index:3;}
     button{margin:18px auto 0 auto;display:block;padding:8px 28px;}
     @media (max-width:900px) {.grid{grid-template-columns:repeat(2,1fr);}}
     @media (max-width:600px) {.grid{grid-template-columns:repeat(1,1fr);}}
@@ -27,6 +68,7 @@
   </div>
   <script>
     let cardsData = [];
+    const bgImgSrc = "https://foxzicool.github.io/pic.svg"; // 你的SVG背景圖
     function loadCards(){
       fetch("https://rfc-caroline-pad-count.trycloudflare.com/get_all_cards")
         .then(r=>{
@@ -40,11 +82,14 @@
             return;
           }
           document.getElementById('cards').innerHTML = cards.map((d,idx)=>`
-            <div class="card" id="card${idx}">
-              <span class="type">${d.type==='testimony1'?'一年內':'三年內'}</span>
-              <span class="date">${d.date}</span>
-              <div class="content">${d.content}</div>
-              <input type="checkbox" class="check" id="check${idx}">
+            <div class="card-wrap">
+              <div class="card-preview" id="card${idx}">
+                <img class="bgimg" src="${bgImgSrc}" alt="背景圖">
+                <span class="type">${d.type==='testimony1'?'一年內':'三年內'}</span>
+                <span class="date">${d.date}</span>
+                <div class="card-content">${d.content}</div>
+                <input type="checkbox" class="check" id="check${idx}">
+              </div>
             </div>
           `).join("");
         })
