--- a/index3.html
+++ b/index3.html
@@ -20,6 +20,7 @@
       background: #fff;
       margin: auto;
       box-shadow: 0 2px 8px #eee;
+      min-height: 340px; /* 增加高度讓checkbox不會被切掉 */
     }
     .bgimg {
       width: 100%;
@@ -35,8 +36,8 @@
       position: absolute;
       left: 0;
       right: 0;
-      top: 50%;
-      transform: translateY(-50%);
+      top: 0;
+      /* transform: none; */   /* 拿掉置中 */
       margin: 20px;
       padding: 10px;
       background: rgba(0,0,0,0.18);
@@ -49,12 +50,12 @@
       text-align: left;
       min-height: 80px;
       display: flex;
-      align-items: center;
-      justify-content: center;
+      align-items: flex-start; /* 文字靠上 */
+      justify-content: flex-start; /* 靠左 */
     }
     .date{font-size:12px;color:#888;position:absolute;right:12px;top:10px;z-index:3;}
     .type{color:#fff;background:#2175b8;padding:2px 8px;border-radius:7px;font-size:13px;position:absolute;left:12px;top:10px;z-index:3;}
-    .check{position:absolute;left:12px;bottom:10px;transform:scale(1.4);z-index:3;}
+    .check{position:absolute;left:12px;bottom:24px;transform:scale(1.4);z-index:3;}  /* bottom往下移24px */
     button{margin:18px auto 0 auto;display:block;padding:8px 28px;}
     @media (max-width:900px) {.grid{grid-template-columns:repeat(2,1fr);}}
     @media (max-width:600px) {.grid{grid-template-columns:repeat(1,1fr);}}
@@ -68,7 +69,7 @@
   </div>
   <script>
     let cardsData = [];
-    const bgImgSrc = "https://foxzicool.github.io/pic.svg"; // 你的SVG背景圖
+    const bgImgSrc = "https://foxzicool.github.io/pic.svg";
     function loadCards(){
       fetch("https://rfc-caroline-pad-count.trycloudflare.com/get_all_cards")
         .then(r=>{
@@ -86,7 +87,7 @@
               <div class="card-preview" id="card${idx}">
                 <img class="bgimg" src="${bgImgSrc}" alt="背景圖">
                 <span class="type">${d.type==='testimony1'?'一年內':'三年內'}</span>
-                <span class="date">${d.date}</span>
+                <span class="date">${d.date ? d.date.slice(0,10) : ''}</span>
                 <div class="card-content">${d.content}</div>
                 <input type="checkbox" class="check" id="check${idx}">
               </div>
