--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,7 @@
     body{font-family:'Microsoft JhengHei',sans-serif;}
     .main{max-width:1200px;margin:30px auto;}
     .grid{display:grid;grid-template-columns:repeat(4,1fr);gap:20px;}
-    .card-wrap{position:relative;}
+    .card-block{display:flex;flex-direction:column;align-items:center;}
     .card-preview {
       width: 100%;
       max-width: 300px;
@@ -18,9 +18,8 @@
       border-radius: 16px;
       overflow: hidden;
       background: #fff;
-      margin: auto;
       box-shadow: 0 2px 8px #eee;
-      min-height: 340px; /* 增加高度讓checkbox不會被切掉 */
+      min-height: 340px;
     }
     .bgimg {
       width: 100%;
@@ -37,9 +36,8 @@
       left: 0;
       right: 0;
       top: 0;
-      /* transform: none; */   /* 拿掉置中 */
       margin: 20px;
-      padding: 10px;
+      padding: 15px 10px 10px 10px; /* 上方多5px */
       background: rgba(0,0,0,0.18);
       border-radius: 8px;
       color: #222;
@@ -50,12 +48,12 @@
       text-align: left;
       min-height: 80px;
       display: flex;
-      align-items: flex-start; /* 文字靠上 */
-      justify-content: flex-start; /* 靠左 */
+      align-items: flex-start;
+      justify-content: flex-start;
     }
     .date{font-size:12px;color:#888;position:absolute;right:12px;top:10px;z-index:3;}
     .type{color:#fff;background:#2175b8;padding:2px 8px;border-radius:7px;font-size:13px;position:absolute;left:12px;top:10px;z-index:3;}
-    .check{position:absolute;left:12px;bottom:24px;transform:scale(1.4);z-index:3;}  /* bottom往下移24px */
+    .card-check{margin-top:12px;transform:scale(1.4);}
     button{margin:18px auto 0 auto;display:block;padding:8px 28px;}
     @media (max-width:900px) {.grid{grid-template-columns:repeat(2,1fr);}}
     @media (max-width:600px) {.grid{grid-template-columns:repeat(1,1fr);}}
@@ -83,14 +81,14 @@
             return;
           }
           document.getElementById('cards').innerHTML = cards.map((d,idx)=>`
-            <div class="card-wrap">
+            <div class="card-block">
               <div class="card-preview" id="card${idx}">
                 <img class="bgimg" src="${bgImgSrc}" alt="背景圖">
                 <span class="type">${d.type==='testimony1'?'一年內':'三年內'}</span>
                 <span class="date">${d.date ? d.date.slice(0,10) : ''}</span>
                 <div class="card-content">${d.content}</div>
-                <input type="checkbox" class="check" id="check${idx}">
               </div>
+              <input type="checkbox" class="card-check" id="check${idx}">
             </div>
           `).join("");
         })
