--- a/index3.html
+++ b/index3.html
@@ -37,8 +37,7 @@
       right: 0;
       top: 0;
       margin: 20px;
-      padding: 15px 10px 10px 10px; /* 上方多5px */
-      background: rgba(0,0,0,0.18);
+      padding: 18px 10px 10px 10px;
       border-radius: 8px;
       color: #222;
       font-size: 20px;
