--- a/index3.html
+++ b/index3.html
@@ -60,7 +60,7 @@
 </head>
 <body>
   <div class="main">
-    <h2>所有生命見證卡片（可多選下載）</h2>
+    <h2>所有生命見證卡片1（可多選下載）</h2>
     <div id="cards" class="grid"></div>
     <button onclick="downloadSelected()">下載所選卡片圖片</button>
   </div>
@@ -100,21 +100,14 @@ function downloadSelected(){
   cardsData.forEach((card,idx)=>{
     if(document.getElementById("check"+idx).checked){
       let node = document.getElementById("card"+idx);
-      html2canvas(node,{scale:2}).then(origCanvas=>{
-        // 新建一個小一半的 canvas
-        let targetW = origCanvas.width / 2;
-        let targetH = origCanvas.height / 2;
-        let smallCanvas = document.createElement("canvas");
-        smallCanvas.width = targetW;
-        smallCanvas.height = targetH;
-        let ctx = smallCanvas.getContext("2d");
-        // 把大圖縮到小圖
-        ctx.drawImage(origCanvas, 0, 0, targetW, targetH);
-        // 下載縮小後的圖
+      // 固定寬高(300x400)，讓所有設備都能正常下載
+      html2canvas(node, { width: 300, height: 400, scale: 1 }).then(origCanvas=>{
         let a = document.createElement("a");
-        a.href = smallCanvas.toDataURL();
+        a.href = origCanvas.toDataURL("image/png");
         a.download = (card.type==='testimony1'?'one_year':'three_year')+"_card_"+(idx+1)+".png";
+        document.body.appendChild(a);
         a.click();
+        document.body.removeChild(a);
       });
     }
   });
