--- a/index2.html
+++ b/index2.html
@@ -27,10 +27,9 @@
   </style>
 </head>
 <body>
-  <h2>三年內生命見證</h2>
+  <h2>三年內生命見證(由於卡片大小限制100字)</h2>
   <textarea id="testimony" placeholder="請輸入你的見證..." rows="5" maxlength="100"></textarea><br>
   <span id="charCount">剩餘 100 字</span>
-  <span id="lineCount">可再輸入 10 行</span><br>
   <button onclick="submitTestimony()">提交</button>
   <p id="status"></p>
   <script>
