--- a/index3.html
+++ b/index3.html
@@ -60,7 +60,7 @@
 </head>
 <body>
   <div class="main">
-    <h2>所有生命見證卡片（可多選下載）</h2>
+    <h2>Dreamers(F組)所有的感謝卡片</h2>
     <div id="cards" class="grid"></div>
     <button onclick="downloadSelected()">下載所選卡片圖片</button>
   </div>
