--- a/index2.html
+++ b/index2.html
@@ -27,8 +27,8 @@
   </style>
 </head>
 <body>
-  <h2>三年內我要感謝神or小組員的事情(由於卡片大小限制100字)</h2>
-  <textarea id="testimony" placeholder="請輸入你的見證..." rows="5" maxlength="100"></textarea><br>
+  <h2>在這三年內我要感謝神or小組員的事情(由於卡片大小限制100字)</h2>
+  <textarea id="testimony" placeholder="我要感謝......" rows="5" maxlength="100"></textarea><br>
   <span id="charCount">剩餘 100 字</span>
   <button onclick="submitTestimony()">提交</button>
   <p id="status"></p>
