--- a/index3.html
+++ b/index3.html
@@ -62,7 +62,7 @@
   <div class="main">
     <h2>Dreamers(F組)所有的感謝卡片牆</h2>
     <div id="cards" class="grid"></div>
-    <button onclick="downloadSelected()">下載所選卡片圖片</button>
+    <button onclick="downloadSelected()" style="display:none;">下載所選卡片圖片</button>
   </div>
   <script>
     let cardsData = [];
