--- a/index.html
+++ b/index.html
@@ -2,65 +2,131 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <title>一年內生命見證上傳</title>
+  <title>三年內生命見證上傳</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    #preview { width: 90vw; max-width: 300px; aspect-ratio: 3/4; position: relative; border-radius: 16px; overflow: hidden; margin-top: 24px; background: #fff; }
-    #bgimg { width: 100%; height: 100%; object-fit: contain; position: absolute; left: 0; top: 0; z-index: 1; pointer-events: none; }
-    #content { 
-      position: absolute;
-      left: 4px;
-      top: 5px;
-      margin: 20px;
-      padding: 10px;
-      border-radius: 8px;
-      color: #222;
-      font-size: 20px;
-      z-index: 2;
-      word-break: break-all;
-      font-family: 'Microsoft JhengHei', sans-serif;
-      text-align: left;
-      min-height: 319px;
+    body {
+      background: #f6f8fb;
+      font-family: 'Microsoft JhengHei', 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
     }
-    textarea {width: 90vw; max-width: 300px;}
-    #charCount { margin-right: 8px;}
+    h2 {
+      margin: 36px 0 18px 0;
+      font-size: 1.15rem;
+      color: #234;
+      text-align: center;
+      letter-spacing: 1px;
+      font-weight: 600;
+      line-height: 1.6;
+    }
+    textarea {
+      width: 92vw;
+      max-width: 340px;
+      min-width: 220px;
+      padding: 14px 16px;
+      border: 1.5px solid #d5dbe8;
+      border-radius: 12px;
+      font-size: 17px;
+      background: #fff;
+      resize: none;
+      box-shadow: 0 2px 8px 0 rgba(100,120,180,0.07);
+      outline: none;
+      transition: border 0.2s, box-shadow 0.2s;
+      margin-bottom: 8px;
+      line-height: 1.7;
+    }
+    textarea:focus {
+      border-color: #568cf3;
+      box-shadow: 0 4px 14px 0 rgba(86,140,243,0.09);
+    }
+    .count-info {
+      width: 100%;
+      max-width: 340px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 8px;
+      gap: 16px;
+      user-select: none;
+    }
+    button {
+      padding: 10px 28px;
+      background: linear-gradient(90deg,#5695fa 60%, #52e4d7 100%);
+      color: #fff;
+      font-size: 18px;
+      border: none;
+      border-radius: 30px;
+      font-weight: 500;
+      letter-spacing: 2px;
+      cursor: pointer;
+      box-shadow: 0 2px 10px 0 rgba(86,149,250,0.09);
+      margin-top: 4px;
+      transition: background 0.18s, transform 0.12s;
+    }
+    button:hover, button:focus {
+      background: linear-gradient(90deg,#3f7fda 60%, #37b9aa 100%);
+      transform: translateY(-2px) scale(1.025);
+      outline: none;
+    }
+    #status {
+      margin-top: 12px;
+      min-height: 24px;
+      color: #d13c3c;
+      font-size: 16px;
+      text-align: center;
+      font-weight: 500;
+      letter-spacing: 1px;
+    }
+    @media (max-width: 400px) {
+      h2 { font-size: 1rem; }
+      textarea, .count-info, button { max-width: 95vw; }
+    }
   </style>
 </head>
 <body>
-  <h2>在這一年我要感謝神or小組員的事情(由於卡片大小限制100字)</h2>
-  <textarea id="testimony" placeholder="我要感謝..." rows="5" maxlength="100"></textarea><br>
-  <span id="charCount">剩餘 100 字</span>
+  <h2>
+    在這一年內我要感謝神 or 小組員的事情<br>
+    
+  </h2>
+  <textarea id="testimony" placeholder="我要感謝......" rows="5"></textarea><br>
+  <div class="count-info">
+    <span id="charCount">剩餘 100 字</span>
+  </div>
   <button onclick="submitTestimony()">提交</button>
   <p id="status"></p>
   <script>
     const textarea = document.getElementById("testimony");
     const charCount = document.getElementById("charCount");
-    const lineCount = document.getElementById("lineCount");
     const MAX_CHAR = 100;
-    const MAX_LINE = 10;
 
-    textarea.addEventListener("input", function() {
-      // 限制字數
-      if (this.value.length > MAX_CHAR) {
-        this.value = this.value.substring(0, MAX_CHAR);
+    // 禁止換行（Enter）
+    textarea.addEventListener("keydown", function(e) {
+      if (e.key === "Enter" || e.keyCode === 13) {
+        e.preventDefault();
       }
-      // 限制行數
-      let lines = this.value.split('\n');
-      if (lines.length > MAX_LINE) {
-        this.value = lines.slice(0, MAX_LINE).join('\n');
-        lines = this.value.split('\n');
+    });
+
+    // 輸入時移除所有換行符號
+    textarea.addEventListener("input", function() {
+      let original = this.value;
+      let filtered = original.replace(/\r?\n/g, "");
+      if (filtered !== original) {
+        this.value = filtered;
       }
       let remainChar = MAX_CHAR - this.value.length;
-      let remainLine = MAX_LINE - lines.length;
       charCount.innerText = `剩餘 ${remainChar} 字`;
-      lineCount.innerText = remainLine >= 0 ? `可再輸入 ${remainLine} 行` : "已達行數上限";
-      charCount.style.color = remainChar < 0 ? "red" : "#222";
-      lineCount.style.color = remainLine <= 0 ? "red" : "#222";
+      charCount.style.color = remainChar < 10 ? "#e67e22" : "#5695fa";
+      if (remainChar < 0) charCount.style.color = "#d13c3c";
     });
 
     function submitTestimony() {
       let content = textarea.value.trim();
-      let lines = content.split('\n');
       if (!content) {
         document.getElementById("status").innerText = "請輸入感謝內容！";
         return;
@@ -69,11 +135,7 @@
         document.getElementById("status").innerText = "最多只能輸入100字";
         return;
       }
-      if (lines.length > MAX_LINE) {
-        document.getElementById("status").innerText = "最多只能輸入10行";
-        return;
-      }
-      fetch("https://ana-aerospace-pending-olympic.trycloudflare.com/submit_testimony1", {
+      fetch("https://contributed-hourly-amazing-okay.trycloudflare.com/submit_testimony1", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ content: content })
@@ -83,10 +145,12 @@
         return response.json();
       })
       .then(data => {
+        document.getElementById("status").style.color = "#22aa55";
         document.getElementById("status").innerText = data.message;
-        setTimeout(() => location.href = "index2.html", 1000);
+        setTimeout(() => location.href = "index3.html", 1200);
       })
       .catch(error => {
+        document.getElementById("status").style.color = "#d13c3c";
         document.getElementById("status").innerText = "後端連不到";
       });
     }
